trunk/Archive2/8b/58a06786a70c01/output
main.cpp: In function 'int main()':
main.cpp:19:77: error: conversion from 'reverse_tuple<std::tuple<int, char, bool> >::type {aka std::tuple<bool, char, int>}' to non-scalar type 'main()::<anonymous struct>' requested
     struct {} _ = typename reverse_tuple<std::tuple<int, char, bool>>::type{};
                                                                             ^
